--- a/index.html
+++ b/index.html
@@ -56,26 +56,99 @@
     */
 
     /* 👉 Task 1 - [HINT] only the flex container needs to be manipulated */
-
+    #flexContainr1{
+      justify-content: space-evenly;
+    }
     /* 👉 Task 2 - [HINT] the flex container needs to change direction */
-
+    #flexContainr2 {
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: center;
+    }
     /* 👉 Task 3 - [HINT] the flex direction can be reversed */
-
+    #flexContainr3 {
+      flex-direction: column-reverse;
+      justify-content: flex-end;
+      align-items: flex-end;
+    }
     /* 👉 Task 4 - [HINT] the flex items need a new order */
+    #flexContainr4 {
+      justify-content: space-around;
+      align-items: flex-end;
+    }
 
+    #flexContainr4 .flexItem:nth-child(1) {
+      order: 2;
+    }
+
+    #flexContainr4 .flexItem:nth-child(2) {
+      order: 3;
+    }
+
+    #flexContainr4 .flexItem:nth-child(3) {
+      order: 1;
+    }
     /* 👉 Task 5 - [HINT] research align-self */
+    #flexContainr5 {
+      flex-direction: column;
+      justify-content: center;
+    }
+
+    #flexContainr5 .flexItem:nth-child(2) {
+      align-self: center;
+    }
 
     /* 👉 Task 6 - [HINT] flex items can be flex containers */
+    #flexContainr6 {
+      flex-direction: row-reverse;
+      justify-content: flex-end;
+      align-items: flex-end;
+    }
 
+    #flexContainr6 .flexItem:nth-child(1) {
+      justify-content: flex-end;
+    }
+
+    #flexContainr6 .flexItem:nth-child(2) {
+      align-items: flex-end;
+    }
+
+    #flexContainr6 .flexItem:nth-child(3) {
+      align-self: flex-start;
+    }
     /* 👉 Task 7 - [HINT] research flex-grow */
+    #flexContainr7 .flexItem:nth-child(1) {
+      flex-grow: 0;
+    }
 
+    #flexContainr7 .flexItem:nth-child(2) {
+      flex-grow: 1;
+    }
+
+    #flexContainr7 .flexItem:nth-child(3) {
+      flex-grow: 2;
+    }
     /* 👉 Task 8 - [HINT] you got this! */
+    #flexContain8 {
+      justify-content: space-between;
+    }
 
+    #flexContainr8 .flexItem:nth-child(1) {
+      justify-content: flex-end;
+    }
 
+    #flexContainr8 .flexItem:nth-child(2) {
+      align-self: center;
+    }
+
+    #flexContainr8 .flexItem:nth-child(3) {
+      align-self: flex-end;
+      justify-content: flex-start;
+    }
     /*
     👉 Part 2 of 2 👈
     Revisit the Module Project of HTML & CSS II and re-style it using Flexbox.
-    Prior to starting, remove the "inline-block" declarations, which were a workaround to make divs fall in rows.
+    Prior to starting, remove the "" declarations, which were a workaround to make divs fall in rows.
     */
 
     /* ❗ 👉 WORK ABOVE THIS LINE! */
